Fixed vertical alignment of top bar.

--- a/site/elements/heading/heading.css
+++ b/site/elements/heading/heading.css
@@ -1,7 +1,7 @@
 .top-element {
     width: calc(90vw / 3);
     height: 100%;
-    padding-top: 20px;
+    padding-top: 15vh;
     color: white;
     text-decoration: none;
     text-align: center;
